--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.14",
     "use-sound": "^4.0.3"
