--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-toastify": "^10.0.6",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.14",
     "use-sound": "^4.0.3"
