--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "canvas": "^3.1.0",
     "framer-motion": "^11.8.0",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
