--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "canvas": "^3.1.0",
+    "critters": "^0.0.25",
     "framer-motion": "^11.8.0",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
